--- a/Master_Code.css
+++ b/Master_Code.css
@@ -123,7 +123,7 @@ body:before {
 
 /* FUCK BETTERDOCS */
 body:after {
-  content: "Do Not Use Betterdocs/Discord Source";
+  content: "";
   background: var(--Background-Colour);
   border: 1px solid var(--Main-Colour);
   left: 50%;
